--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 /* body */
 body{
   margin: 0;
-  font-family: sans-serif;
+  font-family: "Lucida Grande";
 }
 /* ==================== */
 
@@ -16,10 +16,10 @@ body{
 header{
   height: 65px;
   width: 100%;
-  background-color: rgba(44, 61, 65, 0.9);
+  background-color: rgba(66, 64, 62, 0.5);
   position: fixed;
   top: 0;
-  left: 0;
+  z-index: 10;
 }
 
 a{
@@ -34,12 +34,12 @@ a{
 
 .header-left{
   float: left;
-  margin-left: 30px;
+  margin-left: 20px;
 }
 
 .header-right{
   float: right;
-  margin-right: 30px;
+  margin-right: 20px;
 }
 
 .header-right a{
@@ -51,6 +51,7 @@ a{
   float: left;
   transition: all 0.5s;
   font-family: sans-serif;
+  font-size: 14px;
 }
 
 .header-right a:hover{
@@ -58,21 +59,80 @@ a{
 }
 
 .header-right .btn-login{
-  background-color: black;
+  background-color: white;
+  color: black;
+  font-weight: bold;
   border-radius: 20px;
   height: 30px;
   line-height: 30px;
   margin-top: 18px;
+  margin-left: 10px;
+  opacity: 0.9;
 }
 
 .header-right .btn-login:hover{
-  color: rgba(44, 61, 65, 0.9);
-  font-weight: bold;
   background-color: white;
+  font-size: 16px;
+  opacity: 1;
 }
 /* ==================== */
 
 /* mid/center/tengah-tengah divs */
+.container {
+  max-width: 1170px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.top-content{
+  padding: 180px 0 100px 0;
+  background-image: url(../assets/img/living-room.jpg);
+  background-size: cover;
+  color: white;
+  text-align: center;
+}
+
+.top-content h1{
+  opacity: 0,7;
+  font-size: 45px;
+  letter-spacing: 5px;
+  margin-bottom: 10px;
+}
+
+.top-content p{
+  opacity: 0.8;
+  margin-bottom: 10px;
+}
+
+.top-content a{
+  top: 20px;
+}
+
+.btn-content{
+  text-align: center;
+  margin: 30px;
+}
+
+.btn{
+  padding: 5px 12px;
+  color: black;
+  display: inline-block;
+  border-radius: 20px;
+  text-align: center;
+  font-weight: bold;
+  opacity: 0.9;
+  transition: all 0.5s;
+}
+
+.install{
+  background-color: white;
+}
+
+.btn:hover{
+  font-size: 17px;
+  opacity: 1;
+}
 
 /* ==================== */
 /* upper divs */
