--- a/styles/index.css
+++ b/styles/index.css
@@ -19,26 +19,26 @@
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
 }
 /* nav {
-    padding: 10px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  } */
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} */
 /* .logo {
-    width: 250px;
-  } */
+  width: 250px;
+} */
 
 /* nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 15px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: 400;
-  } */
+  display: inline-block;
+  list-style: none;
+  margin: 10px 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 400;
+} */
 .login-btn {
   text-decoration: none;
   color: #fff;
@@ -124,6 +124,21 @@
   text-decoration: none;
 }
 
+.sosial a:hover {
+  width: 47px;
+  height: 37px;
+  border-radius: 100%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: black;
+  background-color: white;
+  cursor: pointer;
+  margin-right: 20px;
+  text-decoration: none;
+}
+
 /* #page one */
 
 .anjay {
@@ -150,6 +165,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  z-index: 1;
 }
 
 nav .logo2 {
@@ -221,7 +237,7 @@ nav ul li a {
 }
 
 /* #Service  */
-.cobaja {
+.cobaaja {
   width: 100%;
   min-height: 100vh;
   background-image: url(../assets/images/yagatau.jpg);
@@ -263,6 +279,7 @@ nav ul li a {
   max-width: 92rem;
   padding: 0 4rem;
   margin: 0 auto;
+  z-index: 0;
 }
 
 .section-header {
@@ -368,7 +385,7 @@ nav ul li a {
 }
 
 .icon {
-  width: 90px;
+  width: 120px;
   margin-bottom: 1.7rem;
 }
 
@@ -381,7 +398,7 @@ nav ul li a {
   margin: 1.8rem 0;
   color: #fff;
   /* font-size: 0.9rem;
-    margin: 1rem 0; */
+  margin: 1rem 0; */
 }
 
 .services .points1 {
@@ -412,6 +429,356 @@ nav ul li a {
   position: relative;
   z-index: 2;
 }
+
+/* contact-us */
+
+.bg-contact {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url(../assets/images/background2.jpg);
+  background-position: center;
+  background-size: cover;
+  padding: 10px 10%;
+  overflow: hidden;
+  position: relative;
+  -webkit-box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+}
+
+.contact {
+  position: relative;
+  min-height: 100vh;
+  padding: 50px 100px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact .content-contact {
+  max-width: 800px;
+  text-align: center;
+}
+
+.contact .content-contact h2 {
+  font-size: 36px;
+  font-weight: 600;
+  color: #fff;
+  padding: 15px;
+}
+
+.contact .content-contact p {
+  font-weight: 300;
+  color: #fff;
+}
+
+.container-contact {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  animation-delay: 0.5s;
+}
+
+.container-contact .contactinfo {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.container-contact .contactinfo .box {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
+}
+
+.container-contact .contactinfo .box .icon-contact {
+  min-width: 60px;
+  height: 60px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+}
+
+.container-contact .contactinfo .box .text-contact {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: #fff;
+  flex-direction: column;
+  font-weight: 300;
+}
+
+.container-contact .contactinfo .box .text-contact h3 {
+  font-weight: 500;
+  color: #fff;
+  padding: 5px;
+}
+
+.contactForm {
+  width: 40%;
+  padding: 40px;
+  background: #fff;
+}
+
+.contactForm h2 {
+  font-size: 30px;
+  color: #333;
+  font-weight: 300;
+}
+
+.contactForm .inputBox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.contactForm .inputBox input,
+.contactForm .inputBox input,
+textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-weight: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #000;
+  outline: none;
+  resize: none;
+}
+.contactForm .inputBox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-weight: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 1s;
+  color: #666;
+}
+
+.contactForm .inputBox input:focus ~ span {
+  color: #000;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+
+.anim {
+  opacity: 0;
+  transform: translateY(30px);
+  animation: moveup 0.5s linear forwards;
+}
+
+@keyframes moveup {
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+/* end contact-us */
+
+/* gallery */
+
+.gallery-bg {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url(../assets/images/gallery-bg.jpeg);
+  background-position: center;
+  background-size: cover;
+  padding: 10px 10%;
+  overflow: hidden;
+  position: relative;
+  -webkit-box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.8);
+}
+
+.content-gallery {
+  max-width: 800px;
+  text-align: center;
+}
+
+.content-gallery h2 {
+  font-size: 36px;
+  font-weight: 600;
+  color: #fff;
+  padding: 15px;
+}
+
+.gallery {
+  position: relative;
+  min-height: 100vh;
+  padding: 50px 100px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  flex-direction: column;
+}
+
+.container-photo {
+  width: 100%;
+  text-align: center;
+}
+
+/* h3 {
+  height: 100%;
+  background-color: rgb(221, 221, 221);
+  line-height: 60px;
+  padding: 0 50px;
+  color: white;
+} */
+
+.input-anjay {
+  display: none;
+}
+
+label {
+  display: inline-block;
+  height: 100%;
+  margin: 0 20px;
+  line-height: 60px;
+  font-size: 18px;
+  color: gray;
+  cursor: pointer;
+  transition: color 0.5s;
+}
+
+label:hover {
+  color: #fff;
+}
+
+.photo-gallery {
+  width: 90%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+}
+
+.pic {
+  position: relative;
+  height: 230px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px lightgray;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.pic img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  transition: 0.5s;
+}
+
+.pic::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+  width: 100%;
+  margin-top: -100%;
+  opacity: 0;
+  transition: 0.3s;
+  transition-delay: 0.2s;
+  z-index: 1;
+}
+
+.pic::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  border-radius: 10px;
+  height: 0;
+  background-color: rgb(0, 0, 0, 0.4);
+  transition: 0.3s;
+}
+
+.pic:hover::after {
+  height: 100%;
+}
+
+.pic:hover::before {
+  margin-top: 0;
+  opacity: 1;
+}
+
+#check1:checked ~ .container-photo .photo-gallery .pic {
+  opacity: 1;
+  transform: scale(1);
+  position: relative;
+  transition: 0.5s;
+}
+
+#check2:checked ~ .container-photo .photo-gallery .kursi {
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#check2:checked ~ .container-photo .photo-gallery .kasur,
+#check2:checked ~ .container-photo .photo-gallery .lemari,
+#check2:checked ~ .container-photo .photo-gallery .meja {
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+
+#check3:checked ~ .container-photo .photo-gallery .kasur {
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#check3:checked ~ .container-photo .photo-gallery .kursi,
+#check3:checked ~ .container-photo .photo-gallery .lemari,
+#check3:checked ~ .container-photo .photo-gallery .meja {
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+
+#check4:checked ~ .container-photo .photo-gallery .lemari {
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#check4:checked ~ .container-photo .photo-gallery .kasur,
+#check4:checked ~ .container-photo .photo-gallery .meja,
+#check4:checked ~ .container-photo .photo-gallery .kursi {
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+
+#check5:checked ~ .container-photo .photo-gallery .meja {
+  transform: scale(1);
+  opacity: 1;
+  position: relative;
+}
+
+#check5:checked ~ .container-photo .photo-gallery .kursi,
+#check5:checked ~ .container-photo .photo-gallery .kasur,
+#check5:checked ~ .container-photo .photo-gallery .lemari {
+  opacity: 0;
+  transform: scale(0);
+  position: absolute;
+  transition: 0s;
+}
+
+/* end gallery */
 
 /* Footer */
 
