--- a/styles/style.css
+++ b/styles/style.css
@@ -11,129 +11,6 @@ body{
   font-family: "Lucida Grande";
   background-color: whitesmoke;
 }
-/* ==================== */
-
-/* LANDING PAGE */
-header{
-  height: 65px;
-  width: 100%;
-  background-color: rgba(66, 64, 62, 0.5);
-  position: fixed;
-  top: 0;
-  z-index: 10;
-}
-
-a{
-  text-decoration: none;
-}
-
-.logo{
-  width: 200px;
-  height: 50px;
-  margin-top: 8px;
-}
-
-.header-left{
-  float: left;
-  margin-left: 20px;
-}
-
-.header-right{
-  float: right;
-  margin-right: 20px;
-}
-
-.header-right a{
-  height: 65px;
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
-  float: left;
-  transition: all 0.5s;
-  font-family: sans-serif;
-  font-size: 14px;
-}
-
-.header-right a:hover{
-  background-color: rgba(240, 239, 239, 0.3);
-}
-
-.header-right .btn-login{
-  background-color: white;
-  color: black;
-  font-weight: bold;
-  border-radius: 20px;
-  height: 30px;
-  line-height: 30px;
-  margin-top: 18px;
-  margin-left: 10px;
-  opacity: 0.9;
-}
-
-.header-right .btn-login:hover{
-  background-color: white;
-  font-size: 16px;
-  opacity: 1;
-}
-/* ==================== */
-
-/* mid/center/tengah-tengah divs */
-.container {
-  max-width: 1170px;
-  width: 100%;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.top-content{
-  padding: 180px 0 100px 0;
-  background-image: url(../assets/img/living-room.jpg);
-  background-size: cover;
-  color: white;
-  text-align: center;
-}
-
-.top-content h1{
-  opacity: 0,7;
-  font-size: 45px;
-  letter-spacing: 5px;
-  margin-bottom: 10px;
-}
-
-.top-content p{
-  opacity: 0.8;
-  margin-bottom: 10px;
-}
-
-.top-content a{
-  top: 20px;
-}
-
-.btn-content{
-  text-align: center;
-  margin: 30px;
-}
-
-.btn{
-  padding: 5px 12px;
-  color: black;
-  display: inline-block;
-  border-radius: 20px;
-  text-align: center;
-  font-weight: bold;
-  opacity: 0.9;
-  transition: all 0.5s;
-}
-
-.install{
-  background-color: white;
-}
-
-.btn:hover{
-  font-size: 17px;
-  opacity: 1;
-}
 
 /* ==================== */
 /* LOGIN PAGE */
@@ -143,7 +20,7 @@ section{
   width: 80%;
   height: 80vh;
   display: flex;
-  margin: 65px 135px;
+  margin: 65px auto;
   border-radius: 10px;
 }
 
@@ -158,8 +35,13 @@ section .leftBox{
   align-items: center;
 }
 
+.logo{
+  width: 200px;
+  height: 50px;
+}
+
 section .leftBox img{
-  opacity: 0.5;
+  opacity: 0.9;
 }
 
 section .leftBox h1{
@@ -237,4 +119,50 @@ section .rightBox .formBox .remember{
   margin-bottom: 10px;
   font-weight: 400;
   font-size: 14px;
+}
+
+@media (max-width: 550px){
+  section{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    margin: auto;
+  }
+
+  section .leftBox{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    border-radius: 0;
+    display: flex;
+  }
+
+  section .rightBox{
+    display: flex;
+    background: rgba(255, 255, 255, 0.9);
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 100%;
+    z-index: 1;
+    border-radius: 0;
+    margin: 65px auto;
+    border-radius: 10px;
+  }
+
+  section .rightBox .formBox{
+    width: 100%;
+    padding: 30px;
+    margin: 50px;
+  }
+
+  section .rightBox .formBox h2{
+    color: black;
+    text-align: center;
+    margin: 30px 0 10px;
+    font-weight: 500;
+  }
 }
