--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ section .leftBox{
   position: relative;
   width: 50%;
   height: 100%;
-  background-image: url(../assets/img/login.png);
+  background-image: url(../img/login.png);
   border-radius: 10px 0 0 10px;
   display: flex;
   justify-content: center;
