fix color table products, custom, users

--- a/assets/css/argon-dashboard.css
+++ b/assets/css/argon-dashboard.css
@@ -25174,7 +25174,8 @@ hr.horizontal.gray-light {
 }
 
 .table > :not(:first-child) {
-  border-top: 1px solid currentColor;
+  border-top: 0.1px solid;
+  border-color: #67748e40;
 }
 
 .timeline {
