--- a/assets/css/argon-dashboard.css
+++ b/assets/css/argon-dashboard.css
@@ -21578,8 +21578,8 @@ fieldset:disabled .btn {
 }
 
 .input-group .form-control:focus {
-  border-left: 1px solid #5e72e4 !important;
-  border-right: 1px solid #5e72e4 !important;
+  border-left: 1px solid #000 !important;
+  border-right: 1px solid #000 !important;
 }
 
 .input-group .form-control:not(:first-child) {
@@ -21603,11 +21603,11 @@ fieldset:disabled .btn {
 
 .input-group
   > :not(:first-child):not(.dropdown-menu):not(.valid-tooltip):not(.valid-feedback):not(.invalid-tooltip):not(.invalid-feedback) {
-  border-left: #fff !important;
+  /* border-left: #fff !important; */
 }
 
 .input-group.focused .input-group-text {
-  border-color: #5e72e4 !important;
+  border-color: #000 !important;
 }
 
 .form-control.form-control-alternative {
@@ -25174,8 +25174,8 @@ hr.horizontal.gray-light {
 }
 
 .table > :not(:first-child) {
-  border-top: 0.1px solid;
-  border-color: #67748e40;
+  border-top: 1px solid currentColor;
+  border-color: #dcdcdc;
 }
 
 .timeline {
